@@ -18,23 +18,37 @@ import org.elasticsearch.search.DocValueFormat;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
 
+/**
+ * Utility class used for fetching field values by reading field data
+ */
 class FieldValueFetcher {
-    private static final Set<Class<?>> VALID_TYPES = Collections.unmodifiableSet(
-        new HashSet<>(Arrays.asList(Long.class, Double.class, BigInteger.class, String.class, BytesRef.class))
+
+    private static final Set<Class<?>> VALID_METRIC_TYPES = Set.of(
+        Long.class,
+        Double.class,
+        BigInteger.class,
+        String.class,
+        BytesRef.class
+    );
+    private static final Set<Class<?>> VALID_LABEL_TYPES = Set.of(
+        Long.class,
+        Double.class,
+        BigInteger.class,
+        String.class,
+        BytesRef.class,
+        Boolean.class
     );
 
-    final String name;
-    final MappedFieldType fieldType;
-    final DocValueFormat format;
-    final IndexFieldData<?> fieldData;
-    final Function<Object, Object> valueFunc;
+    private final String name;
+    private final MappedFieldType fieldType;
+    private final DocValueFormat format;
+    private final IndexFieldData<?> fieldData;
+    private final Function<Object, Object> valueFunc;
 
     protected FieldValueFetcher(String name, MappedFieldType fieldType, IndexFieldData<?> fieldData, Function<Object, Object> valueFunc) {
         this.name = name;
@@ -44,8 +58,25 @@ class FieldValueFetcher {
         this.valueFunc = valueFunc;
     }
 
+    public String name() {
+        return name;
+    }
+
+    public MappedFieldType fieldType() {
+        return fieldType;
+    }
+
+    public DocValueFormat format() {
+        return format;
+    }
+
+    public IndexFieldData<?> fieldData() {
+        return fieldData;
+    }
+
     FormattedDocValues getLeaf(LeafReaderContext context) {
-        final FormattedDocValues delegate = fieldData.load(context).getFormattedValues(DocValueFormat.RAW);
+
+        final FormattedDocValues delegate = fieldData.load(context).getFormattedValues(format);
         return new FormattedDocValues() {
             @Override
             public boolean advanceExact(int docId) throws IOException {
@@ -65,63 +96,52 @@ class FieldValueFetcher {
     }
 
     Object format(Object value) {
-        if (value instanceof Long) {
-            return format.format((long) value);
-        } else if (value instanceof Double) {
-            return format.format((double) value);
-        } else if (value instanceof BytesRef) {
-            return format.format((BytesRef) value);
-        } else if (value instanceof String) {
-            return value.toString();
+        if (value instanceof Long l) {
+            return format.format(l);
+        } else if (value instanceof Double d) {
+            return format.format(d);
+        } else if (value instanceof BytesRef b) {
+            return format.format(b);
+        } else if (value instanceof String s) {
+            return s;
         } else {
             throw new IllegalArgumentException("Invalid type: [" + value.getClass() + "]");
         }
     }
 
-    static List<FieldValueFetcher> build(SearchExecutionContext context, String[] fields) {
-        List<FieldValueFetcher> fetchers = new ArrayList<>();
+    /**
+     * Retrieve field fetchers for a list of fields.
+     */
+    private static List<FieldValueFetcher> build(SearchExecutionContext context, String[] fields, Set<Class<?>> validTypes) {
+        List<FieldValueFetcher> fetchers = new ArrayList<>(fields.length);
         for (String field : fields) {
             MappedFieldType fieldType = context.getFieldType(field);
             if (fieldType == null) {
                 throw new IllegalArgumentException("Unknown field: [" + field + "]");
             }
-            IndexFieldData<?> fieldData = context.getForField(fieldType);
-            fetchers.add(new FieldValueFetcher(field, fieldType, fieldData, getValidator(field)));
+            IndexFieldData<?> fieldData = context.getForField(fieldType, MappedFieldType.FielddataOperation.SEARCH);
+            fetchers.add(new FieldValueFetcher(field, fieldType, fieldData, getValidator(field, validTypes)));
         }
         return Collections.unmodifiableList(fetchers);
     }
 
-    static List<FieldValueFetcher> buildHistograms(SearchExecutionContext context, String[] fields, double interval) {
-        List<FieldValueFetcher> fetchers = new ArrayList<>();
-        for (String field : fields) {
-            MappedFieldType fieldType = context.getFieldType(field);
-            if (fieldType == null) {
-                throw new IllegalArgumentException("Unknown field: [" + field + "]");
-            }
-            IndexFieldData<?> fieldData = context.getForField(fieldType);
-            fetchers.add(new FieldValueFetcher(field, fieldType, fieldData, getIntervalValueFunc(field, interval)));
-        }
-        return Collections.unmodifiableList(fetchers);
-    }
-
-    static Function<Object, Object> getValidator(String field) {
+    static Function<Object, Object> getValidator(String field, Set<Class<?>> validTypes) {
         return value -> {
-            if (VALID_TYPES.contains(value.getClass()) == false) {
+            if (validTypes.contains(value.getClass()) == false) {
                 throw new IllegalArgumentException(
-                    "Expected [" + VALID_TYPES + "] for field [" + field + "], " + "got [" + value.getClass() + "]"
+                    "Expected [" + validTypes + "] for field [" + field + "], " + "got [" + value.getClass() + "]"
                 );
             }
             return value;
         };
     }
 
-    static Function<Object, Object> getIntervalValueFunc(String field, double interval) {
-        return value -> {
-            if (value instanceof Number == false) {
-                throw new IllegalArgumentException("Expected [Number] for field [" + field + "], got [" + value.getClass() + "]");
-            }
-            double number = ((Number) value).doubleValue();
-            return Math.floor(number / interval) * interval;
-        };
+    static List<FieldValueFetcher> forMetrics(SearchExecutionContext context, String[] metricFields) {
+        return build(context, metricFields, VALID_METRIC_TYPES);
     }
+
+    static List<FieldValueFetcher> forLabels(SearchExecutionContext context, String[] labelFields) {
+        return build(context, labelFields, VALID_LABEL_TYPES);
+    }
+
 }
